--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,34 @@
-<p>
-  header works!
-</p>
+<mat-toolbar color='primary'>
+  <mat-toolbar-row>
+    <div class='container'>
+        <div class='row'>
+          <div class='col-md-3'>
+            <span>Computer Management System</span>
+          </div>
+          <div class='col-md-3'></div>
+          <div class='col-md-3'></div>
+          <div class='col-md-3'>
+              <span>
+                  <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+                      <mat-icon>more_vert</mat-icon>
+                    </button>
+                    <mat-menu #menu="matMenu">
+                      <button mat-menu-item>
+                        <mat-icon>dialpad</mat-icon>
+                        <span>Redial</span>
+                      </button>
+                      <button mat-menu-item disabled>
+                        <mat-icon>voicemail</mat-icon>
+                        <span>Check voice mail</span>
+                      </button>
+                      <button mat-menu-item>
+                        <mat-icon>notifications_off</mat-icon>
+                        <span>Disable alerts</span>
+                      </button>
+                    </mat-menu>
+              </span>
+          </div>
+        </div>
+    </div>
+  </mat-toolbar-row>  
+</mat-toolbar>
