fixed as per pull request comments

--- a/src/app/list-computer/list-computer.component.html
+++ b/src/app/list-computer/list-computer.component.html
@@ -29,7 +29,7 @@
       <td mat-cell *matCellDef="let row" > {{row.discontinued}} </td>
     </ng-container>
 
-      <!-- Discontinued Column -->
+      <!-- Company (Name) Column -->
       <ng-container matColumnDef="company">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Company </th>
         <td mat-cell *matCellDef="let row" > {{row.company}} </td>
