--- a/src/app/create-company/create-company.component.html
+++ b/src/app/create-company/create-company.component.html
@@ -1,3 +1,9 @@
-<p>
-  create-company works!
-</p>
+<div class="example-container">
+  <form [formGroup]="companyForm" (ngSubmit)="onSubmitForm()">
+    <mat-form-field>
+      <input matInput formControlName="name" placeholder="name">
+    </mat-form-field>
+    <div></div>
+    <button class="btn btn-primary">Enregistrer</button>
+  </form>
+</div>
