--- a/src/app/create-computer/create-computer.component.html
+++ b/src/app/create-computer/create-computer.component.html
@@ -1,23 +1,33 @@
 <div class="example-container">
-  <mat-form-field>
-    <input matInput placeholder="Input">
-  </mat-form-field>
+  <form [formGroup]="computerForm" (ngSubmit)="onSubmitForm()">
 
   <mat-form-field>
-    <textarea matInput placeholder="name"></textarea>
+    <input matInput formControlName="name" placeholder="name">
   </mat-form-field>
-
+    <div>
+    </div>
   <mat-form-field>
-    <textarea matInput placeholder="introduced"></textarea>
+    <input matInput type="text" formControlName="introduced" placeholder="introduced">
   </mat-form-field>
-
+    <div>
+    </div>
   <mat-form-field>
-    <textarea matInput placeholder="discontinued"></textarea>
+    <input matInput type="text" formControlName="discontinued" placeholder="discontinued">
   </mat-form-field>
-
-  <mat-form-field>
-    <mat-select placeholder="company">
-      <mat-option value="option">Option</mat-option>
-    </mat-select>
+    <div>
+    </div>
+  <mat-form-field formControlName="company">
+    <div class="form-group">
+      <label for="company">Company</label>
+      <select class="form-control" formControlName="company" id="company" required>
+        <option mat-option  *ngFor="let company of companyList" [ngValue]="{id: company.id, name: company.name}" ngDefaultControl>{{company.name}}
+        </option>
+      </select>
+    </div>
+    <div>
+  </div>
   </mat-form-field>
+    <div></div>
+    <button class="btn btn-primary">Enregistrer</button>
+  </form>
 </div>
