--- a/src/app/update-computer/update-computer.component.html
+++ b/src/app/update-computer/update-computer.component.html
@@ -1,3 +1,30 @@
-<p>
-  update-computer works!
-</p>
+<div class="example-container">
+  <form [formGroup]="computerForm" (ngSubmit)="onSubmitForm()">
+    <div></div>
+    <mat-form-field>
+      <input matInput placeholder="name" formControlName="name" value="{{computer.name}}" >
+    </mat-form-field>
+    <div></div>
+    <mat-form-field>
+      <input matInput placeholder="introduced" formControlName="introduced" value="{{computer.introduced}}">
+    </mat-form-field>
+    <div></div>
+    <mat-form-field>
+      <input matInput placeholder="discontinued" formControlName="discontinued" value="{{computer.discontinued}}">
+    </mat-form-field>
+    <div></div>
+    <mat-form-field formControlName="company">
+      <div class="form-group">
+        <label for="company">Company</label>
+        <select class="form-control" formControlName="company" id="company" required>
+          <option mat-option  *ngFor="let company of companyList" [ngValue]="{id: company.id, name: company.name}" ngDefaultControl>{{company.name}}
+          </option>
+        </select>
+      </div>
+      <div>
+      </div>
+    </mat-form-field>
+    <button class="btn btn-primary">Enregistrer</button>
+  </form>
+</div>
+
