--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,9 +1,20 @@
-$orange: #F47023;
-
-$navbar-background-color: $orange;
-$border: $orange;
-$link: $orange;
-
 .menu-span{
     padding-left: 10px;
+}
+
+.columns{
+  width: 100%;
+}
+
+#tabs > ul {
+  border-bottom: 0;
+}
+
+#tabs li {
+  border-bottom: 1px solid;
+}
+
+.brand{
+  font-family: "Wallman";
+  font-size: 1.5em;
 }
