--- a/src/app/list-company/list-company.component.html
+++ b/src/app/list-company/list-company.component.html
@@ -1,5 +1,5 @@
 <mat-form-field>
-  <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+  <input matInput (keyup)="applyFilter($event.target.value)" placeholder="{{ 'listCompany.filter' | translate }}">
 </mat-form-field>
 
 <div class="mat-elevation-z8">
@@ -7,13 +7,13 @@
 
     <!-- ID Column -->
     <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Id </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ 'listCompany.id' | translate }} </th>
       <td mat-cell *matCellDef="let row"> {{row.id}} </td>
     </ng-container>
 
     <!-- Name Column -->
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ 'listCompany.name' | translate }} </th>
       <td mat-cell *matCellDef="let row"> {{row.name}} </td>
     </ng-container>
 
