--- a/src/app/list-computer/list-computer.component.html
+++ b/src/app/list-computer/list-computer.component.html
@@ -1,5 +1,5 @@
 <mat-form-field>
-  <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+  <input matInput (keyup)="applyFilter($event.target.value)" placeholder="{{ 'listComputers.filter' | translate }}">
 </mat-form-field>
 
 <div class="mat-elevation-z8">
@@ -7,32 +7,32 @@
 
     <!-- ID Column -->
     <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Id </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ 'listComputers.id' | translate }} </th>
       <td mat-cell *matCellDef="let row"> {{row.id}} </td>
     </ng-container>
 
     <!-- Name Column -->
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ 'listComputers.name' | translate }} </th>
       <td mat-cell *matCellDef="let row"> {{row.name}} </td>
     </ng-container>
 
     <!-- Introduced Column -->
     <ng-container matColumnDef="introduced">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Introduced </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ 'listComputers.introduced' | translate }} </th>
       <td mat-cell *matCellDef="let row"> {{row.introduced}} </td>
     </ng-container>
 
     <!-- Discontinued Column -->
     <ng-container matColumnDef="discontinued">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Discontinued </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ 'listComputers.discontinued' | translate }} </th>
       <td mat-cell *matCellDef="let row" > {{row.discontinued}} </td>
     </ng-container>
 
 
       <!-- Company (Name) Column -->
       <ng-container matColumnDef="company">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Company </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ 'listComputers.company' | translate }} </th>
         <td mat-cell *matCellDef="let row" > {{row.company}} </td>
       </ng-container>
 
