--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,8 +22,11 @@ $tabs-link-hover-border-bottom-color: $link-color;
 $tabs-link-hover-color: $hover-color;
 $tabs-link-padding: 0.5em 1.5em;
 
+#language.select:after {
+  border-color: $orange;
+}
+
 @import "../node_modules/bulma/sass/utilities/_all";
 @import "../node_modules/bulma/sass/base/_all.sass";
 @import "../node_modules/bulma/sass/components/navbar.sass";
 @import "../node_modules/bulma/sass/components/tabs.sass";
-
