--- a/src/app/delete-company/delete-company.component.html
+++ b/src/app/delete-company/delete-company.component.html
@@ -1,3 +1,8 @@
-<p>
-  delete-company works!
-</p>
+<h1 mat-dialog-title>Remove Company</h1>
+<div mat-dialog-content>
+  <p>Are you sure you want to delete the selected companies ?</p>
+</div>
+<div mat-dialog-actions>
+  <button mat-button (click)="cancel()">Cancel</button>
+  <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Ok</button>
+</div>
