--- a/src/app/update-company/update-company.component.html
+++ b/src/app/update-company/update-company.component.html
@@ -1,7 +1,7 @@
-<form [formGroup]="companyForm" (ngSubmit)="onSubmitForm()">
-
+<div *ngIf="company" class="formulaire">
+<form ngNativeValidate [formGroup]="companyForm" (ngSubmit)="onSubmitForm()">
   <mat-form-field>
-    <textarea matInput formControlName="name" placeholder="name" value="{{company.name}}"></textarea>
+    <textarea matInput formControlName="name" placeholder="name" required value="{{company.name}}"></textarea>
   </mat-form-field>
   <div></div>
   <button class="btn btn-primary">Enregistrer</button>
