--- a/src/app/update-computer/update-computer.component.html
+++ b/src/app/update-computer/update-computer.component.html
@@ -1,30 +1,27 @@
-<div class="example-container">
-  <form [formGroup]="computerForm" (ngSubmit)="onSubmitForm()">
-    <div></div>
+<div *ngIf="computer" class="formulaire">
+  <form ngNativeValidate [formGroup]="computerForm" (ngSubmit)="onSubmitForm()">
     <mat-form-field>
-      <input matInput placeholder="name" formControlName="name" value="{{computer.name}}" >
+      <input matInput placeholder="name" formControlName="name" required value="{{computer.name}}" >
     </mat-form-field>
-    <div></div>
+    <br/>
     <mat-form-field>
       <input matInput placeholder="introduced" formControlName="introduced" value="{{computer.introduced}}">
     </mat-form-field>
-    <div></div>
+    <br/>
     <mat-form-field>
       <input matInput placeholder="discontinued" formControlName="discontinued" value="{{computer.discontinued}}">
     </mat-form-field>
-    <div></div>
-    <mat-form-field formControlName="company">
+    <br/>
+    <mat-form-field>
       <div class="form-group">
         <label for="company">Company</label>
-        <select class="form-control" formControlName="company" id="company" required>
-          <option mat-option  *ngFor="let company of companyList" [ngValue]="{id: company.id, name: company.name}" ngDefaultControl>{{company.name}}
-          </option>
-        </select>
-      </div>
-      <div>
+        <mat-select [(ngModel)]="computer.companyId" class="form-control" formControlName="company" id="company" required>
+          <mat-option *ngFor="let company of companyList" [value]="company.id">{{company.name}}
+          </mat-option>
+        </mat-select>
       </div>
     </mat-form-field>
+    <br/>
     <button class="btn btn-primary">Enregistrer</button>
   </form>
 </div>
-
