initial security commit

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
+<app-header *ngIf="user"></app-header>
+<router-outlet *ngIf="user"></router-outlet>
+<app-security *ngIf="user==undefined"></app-security>
