Vertical align of text in cells done.

--- a/src/app/list-computer/list-computer.component.scss
+++ b/src/app/list-computer/list-computer.component.scss
@@ -1,13 +1,14 @@
 table {
     width: 100%;
-  }
+}
   
-  .mat-form-field {
-    font-size: 14px;
-    width: 100%;
-  }
+.mat-form-field {
+  font-size: 14px;
+  width: 100%;
+}
   
-  td, th {
-    width: 20%;
-  }
+td, th {
+  width: 20%;
+  vertical-align:middle;
+}
   
