--- a/src/app/list-computer/list-computer.component.html
+++ b/src/app/list-computer/list-computer.component.html
@@ -57,7 +57,7 @@
         <td mat-cell *matCellDef="let row" > {{row.company}} </td>
       </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;">
     </tr>
   </table>
