--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<app-header *ngIf="user"></app-header>
+<app-header (eventEmitter)="logout($event)" *ngIf="user"></app-header>
 <router-outlet *ngIf="user"></router-outlet>
-<app-security *ngIf="user==undefined"></app-security>
+<app-security (eventEmitter)="updateToken($event)" *ngIf="user==undefined"></app-security>
