--- a/src/app/delete-computer/delete-computer.component.html
+++ b/src/app/delete-computer/delete-computer.component.html
@@ -1,8 +1,11 @@
-<h1 mat-dialog-title>Remove Computer</h1>
+<div class="fixActionRow">
+  <h1 mat-dialog-title>Remove Computer</h1>
 <div mat-dialog-content>
-  <p>Are you sure you want to delete the selected computers ?</p>
+  <p>Are you sure you want to delete this computer ?</p>
 </div>
+<div class="spacer"></div>
 <div mat-dialog-actions>
-  <button mat-button (click)="cancel()">Cancel</button>
-  <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Ok</button>
+  <button class="button" (click)="cancel()">Cancel</button>
+  <button class="button is-primary" [mat-dialog-close]="true">Ok</button>
+</div>
 </div>
