--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,11 +1,11 @@
 <nav class="navbar">
-  <div class="columns">
-    <div class="column is-one-third">
+  <div class="columns is-multiline is-mobile">
+    <div class="column is-narrow-mobile is-one-quarter-desktop">
       <div class="navbar-item">
         <p class="brand">{{ 'header.title' | translate }}</p>
       </div>
     </div>
-    <div class="column is-one-third">
+    <div class="column is-narrow-mobile is-half-desktop is-half-tablet">
       <div class="tabs is-centered" id="tabs">
         <ul>
           <li [ngClass] ="{'is-active': this.active == 'computer'}"><a (click)="navigate('computer')">{{ 'header.headerMenu.computers' | translate }}</a></li>
@@ -14,7 +14,7 @@
         </ul>
       </div>
     </div>
-    <div class="column is-1 is-offset-3">
+    <div class="column">
       <div class="control has-icons-left">
         <div class="select is-small" id="language">
           <select #langSelect (change)="useLanguage(langSelect.value)">
