--- a/src/app/list-computer/list-computer.component.html
+++ b/src/app/list-computer/list-computer.component.html
@@ -1,30 +1,11 @@
-<div>
-  <button mat-icon-button (click)="deleteDialog()" aria-label="Delete">
-      <mat-icon>delete</mat-icon>
-  </button>
+<div class="columns is-mobile">
+  <div class="column is-4 is-offset-8">
+    <input id="search" class="input" (keyup)="applyFilter($event.target.value)" placeholder="{{ 'listComputers.filter' | translate }}">
+  </div>
 </div>
-<mat-form-field>
-  <input matInput (keyup)="applyFilter($event.target.value)" placeholder="{{ 'listComputers.filter' | translate }}">
-</mat-form-field>
 
 <div class="mat-elevation-z8">
   <table mat-table [dataSource]="dataSource" matSort>
-
-    <!-- Checkbox Column -->
-    <ng-container matColumnDef="select">
-      <th mat-header-cell *matHeaderCellDef>
-        <mat-checkbox (change)="$event ? masterToggle() : null"
-                      [checked]="selection.hasValue() && isAllSelected()"
-                      [indeterminate]="selection.hasValue() && !isAllSelected()" color="primary">
-        </mat-checkbox>
-      </th>
-      <td mat-cell *matCellDef="let row">
-        <mat-checkbox (click)="$event.stopPropagation()"
-                      (change)="$event ? selection.toggle(row) : null"
-                      [checked]="selection.isSelected(row)" color="primary">
-        </mat-checkbox>
-      </td>
-  </ng-container>
 
     <!-- ID Column -->
     <ng-container matColumnDef="id">
@@ -50,17 +31,21 @@
       <td mat-cell *matCellDef="let row" > {{row.discontinued}} </td>
     </ng-container>
 
+    <!-- Company (Name) Column -->
+    <ng-container matColumnDef="company">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ 'listComputers.company' | translate }} </th>
+      <td mat-cell *matCellDef="let row" > {{row.company}} </td>
+    </ng-container>
 
-      <!-- Company (Name) Column -->
-      <ng-container matColumnDef="company">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ 'listComputers.company' | translate }} </th>
-        <td mat-cell *matCellDef="let row" > {{row.company}} </td>
-      </ng-container>
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ 'listComputers.actions' | translate }} </th>
+      <td mat-cell *matCellDef="let row" > <a class="button is-link is-small">Edit</a><a class="button is-danger is-small" (click)="deleteDialog(row)">Delete</a> </td>
+    </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;">
     </tr>
   </table>
 
-  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" [showFirstLastButtons]='true'></mat-paginator>
 </div>
