--- a/src/app/delete-computer/delete-computer.component.html
+++ b/src/app/delete-computer/delete-computer.component.html
@@ -6,6 +6,6 @@
 <div class="spacer"></div>
 <div mat-dialog-actions>
   <button class="button" (click)="cancel()">Cancel</button>
-  <button class="button is-primary" [mat-dialog-close]="true">Ok</button>
+  <button class="button is-primary" [mat-dialog-close]="true" cdkFocusInitial>Ok</button>
 </div>
 </div>
