--- a/src/app/list-users/list-users.component.html
+++ b/src/app/list-users/list-users.component.html
@@ -26,8 +26,8 @@
       <td mat-cell *matCellDef="let row" >{{row.role}}</td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayColumns"></tr>
+    <tr mat-header-row *matHeaderRowDef="displayColumns; sticky: true"></tr>
     <tr mat-row *matRowDef="let row; columns: displayColumns;" ></tr>
   </table>
-  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" ></mat-paginator>
+  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" class="mat-paginator-sticky"></mat-paginator>
 </div>
