--- a/src/app/create-computer/create-computer.component.html
+++ b/src/app/create-computer/create-computer.component.html
@@ -1,20 +1,25 @@
 <div class="formulaire">
+  <div class ="unitForm">
+  <h1>
+    Add a computer
+  </h1>
+    <br/>
   <form ngNativeValidate [formGroup]="computerForm" (ngSubmit)="onSubmitForm()">
     <mat-form-field>
-      <input matInput placeholder="name" required formControlName="name" id="name" >
+      <input matInput placeholder="{{ 'listComputers.name' | translate }}" required formControlName="name" id="name" >
     </mat-form-field>
     <br/>
     <mat-form-field>
-      <input matInput placeholder="introduced" formControlName="introduced" id="introduced" >
+      <input matInput placeholder="{{ 'listComputers.introduced' | translate }}" formControlName="introduced" id="introduced" >
     </mat-form-field>
     <br/>
     <mat-form-field>
-      <input matInput placeholder="discontinued" formControlName="discontinued" id ="discontinued">
+      <input matInput placeholder="{{ 'listComputers.discontinued' | translate }}" formControlName="discontinued" id ="discontinued">
     </mat-form-field>
     <br/>
     <mat-form-field>
       <div class="form-group">
-        <label for="company">Company</label>
+        <label for="company">{{ 'listComputers.company' | translate }}</label>
         <mat-select class="form-control" formControlName="company" id="company" required>
           <mat-option *ngFor="let company of companyList" [value]="company.id">{{company.name}}
           </mat-option>
@@ -24,4 +29,5 @@
     <br/>
     <button class="btn btn-primary">Enregistrer</button>
   </form>
+  </div>
 </div>
