--- a/src/app/update-company/update-company.component.scss
+++ b/src/app/update-company/update-company.component.scss
@@ -5,4 +5,38 @@
   justify-content: center;
   height: 500px;
   width:100%;
+  text-align: center;
+
+
+}
+
+.ng-valid[required], .ng-valid.required  {
+  border-left: 5px solid #42A948; /* green */
+}
+
+h1 {
+  font-size: 20px;
+  color: green;
+}
+
+.unitForm {
+  padding-bottom: 4%;
+  padding-left: 8%;
+  padding-right: 10%;
+  border-radius: 10%;
+  background: white;
+  box-shadow: 10px 10px 5px 5px  #f2f2f2;
+  border: 3px solid #f2f2f2;
+}
+
+button {
+  padding-top: 5%;
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
 }
