--- a/src/app/update-computer/update-computer.component.html
+++ b/src/app/update-computer/update-computer.component.html
@@ -1,20 +1,24 @@
 <div *ngIf="computer" class="formulaire">
+  <div class="unitForm">
+    <h1>
+      Update a Computer
+    </h1>
   <form ngNativeValidate [formGroup]="computerForm" (ngSubmit)="onSubmitForm()">
     <mat-form-field>
-      <input matInput placeholder="name" formControlName="name" required value="{{computer.name}}" >
+      <input matInput placeholder="{{ 'listComputers.name' | translate }}" formControlName="name" required value="{{computer.name}}" >
     </mat-form-field>
     <br/>
     <mat-form-field>
-      <input matInput placeholder="introduced" formControlName="introduced" value="{{computer.introduced}}">
+      <input matInput placeholder="{{ 'listComputers.introduced' | translate }}" formControlName="introduced" value="{{computer.introduced}}">
     </mat-form-field>
     <br/>
     <mat-form-field>
-      <input matInput placeholder="discontinued" formControlName="discontinued" value="{{computer.discontinued}}">
+      <input matInput placeholder="{{ 'listComputers.discontinued' | translate }}" formControlName="discontinued" value="{{computer.discontinued}}">
     </mat-form-field>
     <br/>
     <mat-form-field>
       <div class="form-group">
-        <label for="company">Company</label>
+        <label for="company">{{ 'listComputers.company' | translate }}</label>
         <mat-select [(ngModel)]="computer.companyId" class="form-control" formControlName="company" id="company" required>
           <mat-option *ngFor="let company of companyList" [value]="company.id">{{company.name}}
           </mat-option>
@@ -22,6 +26,7 @@
       </div>
     </mat-form-field>
     <br/>
-    <button class="btn btn-primary">Enregistrer</button>
+    <button>Enregistrer</button>
   </form>
+</div>
 </div>
