--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,34 +1,16 @@
-<div class="container">
-  <div class="row">
-    <div class="col-md-5"></div>
-    <div class="col-md-2">
-        <mat-card class="example-card">
-            <mat-card-header>
-              <mat-card-title>Login</mat-card-title>
-            </mat-card-header>
-            <mat-card-content>
-              <form class="example-form">
-                <table class="example-full-width" cellspacing="0">
-                  <tr>
-                    <td>
-                      <mat-form-field class="example-full-width">
-                      <input matInput placeholder="Username" [(ngModel)]="username" name="username" required>
-                      </mat-form-field>
-                    </td>
-                  </tr>
-                  <tr>
-                  <td><mat-form-field class="example-full-width">
-                    <input matInput placeholder="Password" [(ngModel)]="password"type="password" name="password" required>
-                  </mat-form-field></td>
-                </tr></table>
-              </form>
-              <mat-spinner [style.display]="showSpinner ? 'block' : 'none'"></mat-spinner>
-            </mat-card-content>
-            <mat-card-actions>
-              <button mat-raised-button (click)="login()" color="primary">Login</button>
-            </mat-card-actions>
-          </mat-card>
+<div id="login">
+  <div class="login-card">
+
+    <div class="card-title">
+      <h1>Please Sign In</h1>
     </div>
-    <div class="col-md-5"></div>
+
+    <div class="content">
+      <form method="POST" action="#">
+        <input [(ngModel)]="username" id="username" type="text" name="username" title="username" placeholder="Username" required autofocus>
+        <input [(ngModel)]="password" id="password" type="password" name="password" title="password" placeholder="Password" required>
+      </form>
+      <button type="submit" class="btn btn-primary" (click)="login()">Login</button>
+    </div>
   </div>
 </div>
