i18n fix plus backup

--- a/src/app/create-company/create-company.component.html
+++ b/src/app/create-company/create-company.component.html
@@ -1,6 +1,6 @@
 <div class="formulaire">
   <div class ="unitForm">
-  <h1>Add a company</h1>
+  <h1>{{ 'formCompany.add' | translate }}</h1>
 <br/>
   <br/>
   <br/>
