--- a/src/app/delete-computer/delete-computer.component.html
+++ b/src/app/delete-computer/delete-computer.component.html
@@ -4,7 +4,7 @@
   <p>Are you sure you want to delete this computer ?</p>
 </div>
 <div class="spacer"></div>
-<div mat-dialog-actions>
+<div mat-dialog-actions align="end">
   <button class="button" (click)="cancel()">Cancel</button>
   <button class="button is-primary" [mat-dialog-close]="true" cdkFocusInitial>Ok</button>
 </div>
