--- a/src/app/delete-computer/delete-computer.component.scss
+++ b/src/app/delete-computer/delete-computer.component.scss
@@ -7,3 +7,17 @@
 .spacer {
   flex-grow: 1;
 }
+
+button {
+  margin: 0 0.25em;
+}
+
+.mat-dialog-actions {
+  &[align='end'] {
+    justify-content: flex-end;
+  }
+
+  &[align='center'] {
+    justify-content: center;
+  }
+}
