Add button and filter to left

--- a/src/app/list-computer/list-computer.component.scss
+++ b/src/app/list-computer/list-computer.component.scss
@@ -1,12 +1,16 @@
 table {
     width: 100%;
-  }
+}
 
-  .mat-form-field {
-    font-size: 14px;
-    width: 100%;
-  }
+.mat-form-field {
+  font-size: 14px;
+  width: 100%;
+}
 
-  td, th {
-    width: 20%;
-  }
+td, th {
+  width: 20%;
+}
+
+.column-container {
+    margin: 1em;
+}
