--- a/src/app/list-computer/list-computer.component.html
+++ b/src/app/list-computer/list-computer.component.html
@@ -1,6 +1,11 @@
-<div class="columns is-mobile">
-  <div class="column is-4 is-offset-8">
-    <input id="search" class="input" (keyup)="applyFilter($event.target.value)" placeholder="{{ 'listComputers.filter' | translate }}">
+<div class="column-container">
+  <div class="columns is-mobile">
+    <div class="column is-4">
+      <input id="search" class="input" (keyup)="applyFilter($event.target.value)" placeholder="{{ 'listComputers.filter' | translate }}">
+    </div>
+    <div class="column is-1 is-offset-7">
+      <button class="button is-primary" (click)="addDialog()">Add</button>
+    </div>
   </div>
 </div>
 
@@ -39,7 +44,7 @@
 
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ 'listComputers.actions' | translate }} </th>
-      <td mat-cell *matCellDef="let row" > <a class="button is-link is-small">Edit</a><a class="button is-danger is-small" (click)="deleteDialog(row)">Delete</a> </td>
+      <td mat-cell *matCellDef="let row" > <a class="button is-link is-small" (click)="editDialog(row)">Edit</a><a class="button is-danger is-small" (click)="deleteDialog(row)">Delete</a> </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
