--- a/src/app/list-company/list-company.component.scss
+++ b/src/app/list-company/list-company.component.scss
@@ -1,12 +1,12 @@
 table {
-  width: 100%; 
+  width: 100%;
 }
 
 .mat-form-field {
   font-size: 14px;
   width: 100%;
 }
-  
+
 td, th {
   width: 25%;
   vertical-align:middle;
@@ -16,4 +16,9 @@ td, th {
   bottom: 0px;
   position: sticky;
   z-index: 10;
+  border-top: 1px solid rgba(0,0,0,.12);
+}
+
+.column-container {
+  margin: 1em;
 }
