--- a/src/app/delete-company/delete-company.component.html
+++ b/src/app/delete-company/delete-company.component.html
@@ -1,8 +1,11 @@
-<h1 mat-dialog-title>Remove Company</h1>
-<div mat-dialog-content>
-  <p>Are you sure you want to delete the selected companies ?</p>
-</div>
-<div mat-dialog-actions>
-  <button mat-button (click)="cancel()">Cancel</button>
-  <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Ok</button>
+<div class="fixActionRow">
+  <h1 mat-dialog-title>Remove Company</h1>
+  <div mat-dialog-content>
+    <p>Are you sure you want to delete this company ?</p>
+  </div>
+  <div class="spacer"></div>
+  <div mat-dialog-actions align="end">
+    <button class="button" (click)="cancel()">Cancel</button>
+    <button class="button is-primary" [mat-dialog-close]="true" cdkFocusInitial>Delete</button>
+  </div>
 </div>
