--- a/src/app/delete-computer/delete-computer.component.html
+++ b/src/app/delete-computer/delete-computer.component.html
@@ -1,11 +1,11 @@
 <div class="fixActionRow">
   <h1 mat-dialog-title>Remove Computer</h1>
-<div mat-dialog-content>
-  <p>Are you sure you want to delete this computer ?</p>
-</div>
-<div class="spacer"></div>
-<div mat-dialog-actions align="end">
-  <button class="button" (click)="cancel()">Cancel</button>
-  <button class="button is-primary" [mat-dialog-close]="true" cdkFocusInitial>Ok</button>
-</div>
+  <div mat-dialog-content>
+    <p>Are you sure you want to delete this computer ?</p>
+  </div>
+  <div class="spacer"></div>
+  <div mat-dialog-actions align="end">
+    <button class="button" (click)="cancel()">Cancel</button>
+    <button class="button is-primary" [mat-dialog-close]="true" cdkFocusInitial>Delete</button>
+  </div>
 </div>
