--- a/src/app/list-company/list-company.component.html
+++ b/src/app/list-company/list-company.component.html
@@ -1,30 +1,16 @@
-<div>
-    <button mat-icon-button (click)="deleteDialog()" aria-label="Delete">
-        <mat-icon>delete</mat-icon>
-    </button>
+<div class="column-container">
+  <div class="columns is-mobile">
+    <div class="column is-4">
+      <input id="search" class="input" (keyup)="applyFilter($event.target.value)" placeholder="{{ 'listComputers.filter' | translate }}">
+    </div>
+    <div class="column is-1 is-offset-7">
+      <button class="button is-primary" (click)="addDialog()">Add</button>
+    </div>
+  </div>
 </div>
-<mat-form-field>
-  <input matInput (keyup)="applyFilter($event.target.value)" placeholder="{{ 'listCompany.filter' | translate }}">
-</mat-form-field>
 
 <div class="mat-elevation-z8">
   <table mat-table [dataSource]="dataSource" matSort>
-
-    <!-- Checkbox Column -->
-    <ng-container matColumnDef="select">
-        <th mat-header-cell *matHeaderCellDef>
-          <mat-checkbox (change)="$event ? masterToggle() : null"
-                        [checked]="selection.hasValue() && isAllSelected()"
-                        [indeterminate]="selection.hasValue() && !isAllSelected()" color="primary">
-          </mat-checkbox>
-        </th>
-        <td mat-cell *matCellDef="let row">
-          <mat-checkbox (click)="$event.stopPropagation()"
-                        (change)="$event ? selection.toggle(row) : null"
-                        [checked]="selection.isSelected(row)" color="primary">
-          </mat-checkbox>
-        </td>
-    </ng-container>
 
     <!-- ID Column -->
     <ng-container matColumnDef="id">
@@ -38,11 +24,17 @@
       <td mat-cell *matCellDef="let row"> {{row.name}} </td>
     </ng-container>
 
+    <!-- Actions Column -->
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ 'listCompanies.actions' | translate }} </th>
+      <td mat-cell *matCellDef="let row" > <a class="button is-link is-small" (click)="editDialog(row)">Edit</a><a class="button is-danger is-small" (click)="deleteDialog(row)">Delete</a> </td>
+    </ng-container>
+
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;">
     </tr>
   </table>
 
-  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" class="mat-paginator-sticky"></mat-paginator>
+  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" [showFirstLastButtons]='true' class="mat-paginator-sticky"></mat-paginator>
 </div>
