--- a/src/app/list-computer/list-computer.component.html
+++ b/src/app/list-computer/list-computer.component.html
@@ -42,6 +42,7 @@
       <td mat-cell *matCellDef="let row" > {{row.company}} </td>
     </ng-container>
 
+    <!-- Actions Column -->
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ 'listComputers.actions' | translate }} </th>
       <td mat-cell *matCellDef="let row" > <a class="button is-link is-small" (click)="editDialog(row)">Edit</a><a class="button is-danger is-small" (click)="deleteDialog(row)">Delete</a> </td>
