Correction on translations and pathNames

--- a/src/app/list-company/list-company.component.html
+++ b/src/app/list-company/list-company.component.html
@@ -4,7 +4,7 @@
     </button>
 </div>
 <mat-form-field>
-  <input matInput (keyup)="applyFilter($event.target.value)" placeholder="{{ 'listCompany.filter' | translate }}">
+  <input matInput (keyup)="applyFilter($event.target.value)" placeholder="{{ 'listCompanies.filter' | translate }}">
 </mat-form-field>
 
 <div class="mat-elevation-z8">
@@ -28,13 +28,13 @@
 
     <!-- ID Column -->
     <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ 'listCompany.id' | translate }} </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ 'listCompanies.id' | translate }} </th>
       <td mat-cell *matCellDef="let row"> {{row.id}} </td>
     </ng-container>
 
     <!-- Name Column -->
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ 'listCompany.name' | translate }} </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ 'listCompanies.name' | translate }} </th>
       <td mat-cell *matCellDef="let row"> {{row.name}} </td>
     </ng-container>
 
