Translation of login and logout button

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -39,7 +39,7 @@
         <div class="dropdown-menu" id="dropdown-menu" role="menu">
           <div class="dropdown-content">
             <a (click)="logout()" class="dropdown-item">
-              Logout
+              {{ 'header.user.logout' | translate }}
             </a>
           </div>
         </div>
