Added link to landing page on header

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
   <div class="columns">
     <div class="column is-one-third">
       <div class="navbar-item">
-        <p class="brand">{{ 'header.title' | translate }}</p>
+        <p class="brand"> <a (click)="navigate('home')">{{ 'header.title' | translate }}</a></p>
       </div>
     </div>
     <div class="column is-one-third">
