Linear gradient for login page

--- a/src/app/list-users/list-users.component.scss
+++ b/src/app/list-users/list-users.component.scss
@@ -1,20 +1,24 @@
 table {
   width: 100%;
 }
-  
+
 .mat-form-field {
   font-size: 14px;
   width: 100%;
 }
-  
+
 td, th {
   width: 20%;
   vertical-align:middle;
 }
-  
+
 .mat-paginator-sticky {
   bottom: 0px;
   position: sticky;
   z-index: 10;
+  border-top: 1px solid rgba(0,0,0,.12);
 }
-  
+
+.column-container {
+  margin: 1em;
+}
