--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,5 +1,6 @@
 $background-color:#464646;
 $orange:#F47023;
+$cyan: hsl(204, 86%, 53%);
 $link-color: #808080;
 $hover-color: #ccc;
 $primary: $orange;
