--- a/src/app/list-users/list-users.component.html
+++ b/src/app/list-users/list-users.component.html
@@ -1,33 +1,46 @@
-<mat-form-field>
-  <input placeholder="Filter" matInput (keyuUp)="applyFilter($event.target.value)">
-</mat-form-field>
+<div class="column-container">
+  <div class="columns is-mobile">
+    <div class="column is-4">
+      <input id="search" class="input" (keyup)="applyFilter($event.target.value)" placeholder="{{ 'listComputers.filter' | translate }}">
+    </div>
+  </div>
+</div>
 
 <div class="mat-elevation-z8">
   <table mat-table [dataSource]="dataSource" matSort>
-    
+
     <!-- ID Column -->
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
       <td mat-cell *matCellDef="let row" >{{row.id}}</td>
     </ng-container>
 
+    <!-- Username Column -->
     <ng-container matColumnDef="username">
       <th mat-header-cell *matHeaderCellDef mat-sort-header >Username</th>
       <td mat-cell *matCellDef="let row" >{{row.username}}</td>
     </ng-container>
 
+    <!-- Enabled Column -->
     <ng-container matColumnDef="enabled">
       <th mat-header-cell *matHeaderCellDef mat-sort-header >Enabled</th>
       <td mat-cell *matCellDef="let row" >{{row.enabled}}</td>
     </ng-container>
 
+    <!-- Role Column -->
     <ng-container matColumnDef="role">
       <th mat-header-cell *matHeaderCellDef mat-sort-header >Role</th>
       <td mat-cell *matCellDef="let row" >{{row.role}}</td>
     </ng-container>
 
+    <!-- Actions Column -->
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ 'listUsers.actions' | translate }} </th>
+      <td mat-cell *matCellDef="let row" ><a class="button is-danger is-small" (click)="deleteDialog(row)">Delete</a> </td>
+    </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="displayColumns; sticky: true"></tr>
     <tr mat-row *matRowDef="let row; columns: displayColumns;" ></tr>
   </table>
-  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" class="mat-paginator-sticky"></mat-paginator>
+  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" [showFirstLastButtons]='true' class="mat-paginator-sticky"></mat-paginator>
 </div>
